--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -25,11 +25,11 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.515.0",
-    "next": "^15.3.3",
+    "next": "^14.2.3",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
+    "react": "^18.2.0",
     "react-day-picker": "^9.7.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.58.0",
     "react-spinners": "^0.17.0",
     "sonner": "^2.0.5",
