--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "email": "email dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -21,9 +22,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-switch": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@react-email/components": "^0.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "inngest": "^3.39.2",
     "lucide-react": "^0.515.0",
     "next": "^14.2.3",
     "next-themes": "^0.4.6",
@@ -44,6 +47,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.3.3",
     "prisma": "^6.9.0",
+    "react-email": "4.0.17",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.4"
   }
