--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@arcjet/next": "^1.0.0-beta.8",
     "@clerk/nextjs": "^6.9.0",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.9.0",
