--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@arcjet/next": "^1.0.0-beta.8",
     "@clerk/nextjs": "^6.9.0",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.1.1",
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-checkbox": "^1.3.2",
